Added Script Editor
Made:
	- Fixed some bugs in threads
	- Added CCodeEditor class for code edition (scripts, shaders, etc)
	- Added Script Editor (using CCodeEditor as module for code edition)
	- Writed a lot of functions for LUA
	- Fixed bugs in scripts editor for effect Renders

To Do:
	- Finish adding functions for LUA
	- Use STerrainData instead of old architecture for terrains

Example script (LUA) :

----------------------------------------------------
----------CFILESYSTEM PSEUDO CLASS----------------
----------------------------------------------------
CFileSystem = {

}
--Returns table of full file names in directory path
function CFileSystem:getFileList(path, resolve)
    local fs = FileSystem.new()
    local t = {}
    for k,v in ipairs(fs:getFileList(path, resolve)) do
        t[k] = v
    end
    return t
end
--Returns files count of the directory path
function CFileSystem:getFileCount(path, resolve)
    local fs = FileSystem.new()
    return fs:getFileCount(path, resolve)
end
----------------------------------------------------
-------------------MY APPLICATION------------------
----------------------------------------------------
--Adds objects from directory path, using CFileSystem
function addObjectsFromDirectory(path, resolve)
    local files = CFileSystem:getFileList(path, resolve)
    local filesCount = CFileSystem:getFileCount(path, resolve)
    local sn = Scene.new()

    for i=0,filesCount do
        myMesh = sn:loadMesh(files[i])
        sn:addObjectMeshSceneNode(myMesh)
    end
end
--Adds terrains from directory path, using CFileSystem
function addTerrainsFromDirectory(path, resolve)
    local files = CFileSystem:getFileList(path, resolve)
    local filesCount = CFileSystem:getFileCount(path, resolve)
    local sn = Scene.new()

    for i=0,filesCount do
        myMesh = sn:loadMesh(files[i])
        sn:addTerrainMeshSceneNode(myMesh)
    end
end

addObjectsFromDirectory("tata/", true)
addTerrainsFromDirectory("tata/", true)

--- a/.gitignore
+++ b/.gitignore
@@ -6556,3 +6556,4 @@ SSWE/data/Characters/test.anc
 SSWE/Renders/LHouse.jpg
 SSWE/Renders/LRuins.jpg
 SSWE/Renders/LSponza.jpg
+SSWE/Renders/LResident.jpg
