Final Core Data update
Made:
	- Updated terrain utilization using structure STerrain instead of old architecture
	- Some updates on Core
	- Parallelized main thread treatments on rendering
	- Optimized a lot shadow maps calculation (VSM or not have the same FPS)
	- Updated importer and exporter for scripts
	- Added some functions in lua binds

To Do:
	- Reorganize project folders

--- a/.gitignore
+++ b/.gitignore
@@ -6557,3 +6557,156 @@ SSWE/Renders/LHouse.jpg
 SSWE/Renders/LRuins.jpg
 SSWE/Renders/LSponza.jpg
 SSWE/Renders/LResident.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/DMC4_Stage_Streets.mtl
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st000-t-sm_NUKIout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st000-t-sm_NUKIout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st000-t-sm_NUKIout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-m-enkei01_NOMIP_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-m-enkei01_NOMIP_BMout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-alpha_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-alpha_BMout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-alpha_BMout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-alpha_MMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-door00_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-enkei00_NOMIP_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-gaiheki_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-gekikabe_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-ha_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-ha_BMout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-ha_BMout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-ishida_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-kai_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-kakuji_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-kawakabe_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-mon_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-nakabe_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-pihashi_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-shiba_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-tobira_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-touk_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st001-t-yuka_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-akayane_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-buil2_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-buil3_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-buil4_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-buil5_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-buil6_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/ST004-t-bus_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-gomi_NUKI_NOMIPout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-gomi_NUKI_NOMIPout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-gomi_NUKI_NOMIPout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-hada_NUKIout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-hada_NUKIout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-hada_NUKIout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-hako_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-hashi_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-hasma_NUKIout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-hasma_NUKIout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-hasma_NUKIout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-hisashi_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-jeeblue_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-jeewhite_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-juhi_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/ST004-t-kanban_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-mado_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-manho_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-pickblue_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-saku_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-saku_BMout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-saku_BMout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-sakudoor_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-sakudoor_BMout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-sakudoor_BMout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/ST004-t-sign_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-tenten_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-trayane_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-yane2_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-yane3_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-yukaoku_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-zebra_NUKIout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-zebra_NUKIout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004-t-zebra_NUKIout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004_t_engeki_NOMIP_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/st004_t_engeki1_NOMIP_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Fortuna Streets/Maps/xst004-t-buil1_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/DMC4_Stage_Laboratory.mtl
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/est216-t-121_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-000_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-005_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-032_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-044_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-082_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-083_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-090_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-092_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-093_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-094_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-095_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-110_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-111_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-112_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-113_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-114_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-115_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-116_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-117_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-119_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-120_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-122_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-123_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-124_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-125_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-126_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-127_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-AFami_NUKIout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-AFami_NUKIout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-alfa_NUKIout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-alfa_NUKIout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-em005body_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-hito_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-kaidan_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-komono_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-paipu_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-tenjyou_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-wall03_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Laboratory/Maps/st216-t-yuka_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/DMC4_Snow_Scene.mtl
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-arch_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-bell_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-bridge01_BMout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-bridge01_BMout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-bridgefloor_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-bridgerail_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-broken_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-castle_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-castle2_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-cliff_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-cliffup2_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-cliffup2alpha01_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-cliffup2alpha02_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-cliffup2snowfit_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-door00_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-ice_BMout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-ice_BMout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-kinomiki_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-mesh_NOMIP_NUKIout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-mesh_NOMIP_NUKIout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-meshedge_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-moon_NOMIP_BMout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-moon_NOMIP_BMout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-mountain00_NOMIP_BMout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-mountain00_NOMIP_BMout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-path_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-path2_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-pillar_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-sky_NOMIP_BMout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-sky_NOMIP_BMout_mm.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-sm_NUKIout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-sm_NUKIout_mm.png
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-snow2_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-starlight01_NOMIP_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-stone_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-tower_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-towerwall_BMout.jpg
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-treeleaf_BMout.png
+SSWE/data/Nouveau dossier/DMC4 Stage Snow Scene/Maps/st105-t-treeleaf_BMout_mm.jpg
