--- a/SSWEProject/SSWELib/SSWELib.vcxproj
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj
@@ -150,8 +150,6 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\sources\Device\Monitor\MonitorRegister.cpp" />
-    <ClCompile Include="OculusRift.cpp" />
     <ClCompile Include="SSWELib.cpp" />
     <ClCompile Include="SSWELib\CharacterEdition\CAction.cpp" />
     <ClCompile Include="SSWELib\CharacterEdition\CUICharacterWindow.cpp" />
@@ -165,6 +163,7 @@
     <ClCompile Include="SSWELib\Device\Core\Scripting\CLuaBinds.cpp" />
     <ClCompile Include="SSWELib\Device\Core\Scripting\CSceneScripting.cpp" />
     <ClCompile Include="SSWELib\Device\Core\Scripting\CUIScriptEditor.cpp" />
+    <ClCompile Include="SSWELib\Device\Monitor\MonitorRegister.cpp" />
     <ClCompile Include="SSWELib\GUIExtension\CodeEditor\CGUICodeEditor.cpp" />
     <ClCompile Include="SSWELib\GUIExtension\Graph2D\GraphKat.cpp" />
     <ClCompile Include="SSWELib\GUIExtension\OpenFileDialog\CGUIFileSelector.cpp" />
@@ -222,10 +221,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\sources\Device\Monitor\IMonitor.h" />
-    <ClInclude Include="..\..\sources\Device\Monitor\IMonitorRegisterer.h" />
-    <ClInclude Include="..\..\sources\Device\Monitor\MonitorRegister.h" />
-    <ClInclude Include="OculusRift.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SSWELib.h" />
     <ClInclude Include="SSWELib\CharacterEdition\CAction.h" />
@@ -240,6 +235,9 @@
     <ClInclude Include="SSWELib\Device\Core\Scripting\CLuaBinds.h" />
     <ClInclude Include="SSWELib\Device\Core\Scripting\CSceneScripting.h" />
     <ClInclude Include="SSWELib\Device\Core\Scripting\CUIScriptEditor.h" />
+    <ClInclude Include="SSWELib\Device\Monitor\IMonitor.h" />
+    <ClInclude Include="SSWELib\Device\Monitor\IMonitorRegisterer.h" />
+    <ClInclude Include="SSWELib\Device\Monitor\MonitorRegister.h" />
     <ClInclude Include="SSWELib\GUIExtension\CodeEditor\CGUICodeEditor.h" />
     <ClInclude Include="SSWELib\GUIExtension\Graph2D\GraphKat.h" />
     <ClInclude Include="SSWELib\GUIExtension\OpenFileDialog\CGUIFileSelector.h" />
