--- a/SSWEProject/SSWEOculusRiftPlugin/SSWEOculusRiftPlugin.vcxproj.filters
+++ b/SSWEProject/SSWEOculusRiftPlugin/SSWEOculusRiftPlugin.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="SSWEOculusRiftPlugin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -38,11 +41,13 @@
     <ClCompile Include="SSWEOculusRiftPlugin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="dllmain.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="OculusRift.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="SSWEOculusRiftPlugin.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
