--- a/SSWEProject/SSWEGenericMonitor/SSWEGenericMonitor.vcxproj.filters
+++ b/SSWEProject/SSWEGenericMonitor/SSWEGenericMonitor.vcxproj.filters
@@ -30,12 +30,18 @@
     <ClInclude Include="SSWEGenericMonitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CGenericMonitor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SSWEGenericMonitor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CGenericMonitor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
